# cocobean

./: .gitignore  Cargo.toml  build.rs
src/: ast.rs  hlcl.lalrpop  hlcl.rs  lexer.rs  main.rs  parse.rs  project.rs  resolve.rs  session.rs  span.rs
src/ast/: id.rs  mut_visit.rs  numbering.rs  visit.rs
src/coco_asm/: Cargo.toml  coord.rs  function.rs  lib.rs  names.rs  selector.rs
src/coco_assembler/: Cargo.toml  lib.rs  token.rs  translate.rs
src/coco_assembler/translate/: tests.rs
src/coco_ast/: Cargo.toml  id.rs  lib.rs  visit.rs
src/coco_ast_merger/: Cargo.toml  lib.rs
src/coco_error/: Cargo.toml  lib.rs
src/coco_helpers/: Cargo.toml  lib.rs
src/coco_parse/: Cargo.toml  build.rs  coco.lalrpop  coco.rs  err.rs  hlcl.rs  lexer.rs  lib.rs
src/coco_project/: Cargo.toml  lib.rs
src/coco_resolve/: Cargo.toml  lib.rs
src/coco_span/: Cargo.toml  kw.rs  lib.rs  sourcemap.rs
src/coco_span/benches/: sourcemap.rs
src/coco_span/sourcemap/: tests.rs
src/hlcl_asm/: Cargo.toml  function.rs  lib.rs  names.rs  selector.rs
src/hlcl_asm/function/: commands.rs  dsl.rs
src/hlcl_asm_lowering/: Cargo.toml  lib.rs  token.rs  translate.rs
src/hlcl_assembler/: Cargo.toml  lib.rs  token.rs  translate.rs
src/hlcl_assembler/translate/: tests.rs
src/hlcl_ast/: Cargo.toml  lib.rs  mut_visit.rs  visit.rs
src/hlcl_ast_merger/: Cargo.toml  lib.rs
src/hlcl_error/: Cargo.toml  lib.rs
src/hlcl_finalize/: Cargo.toml  lib.rs
src/hlcl_helpers/: Cargo.toml  id_map.rs  lib.rs  resource_name.rs
src/hlcl_parse/: Cargo.toml  build.rs  err.rs  hlcl.lalrpop  hlcl.rs  lexer.rs  lib.rs  util.rs
src/hlcl_project/: Cargo.toml  lib.rs
src/hlcl_resolve/: Cargo.toml  lib.rs
src/hlcl_span/: Cargo.toml  kw.rs  lib.rs  sourcemap.rs
src/hlcl_span/benches/: sourcemap.rs
src/hlcl_span/sourcemap/: tests.rs
src/parse/: err.rs  hlcl.lalrpop  hlcl.rs  lexer.rs
src/test_prog/: test_mod.hlcl
test_prog/: main.hlcl
