[package]
name = "high-level-command-language"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "src/hlcl_parse",
    "src/hlcl_span",
    "src/hlcl_ast",
    "src/hlcl_helpers",
    "src/hlcl_finalize",
    "src/hlcl_project",
    "src/hlcl_asm",
    "src/hlcl_assembler",
    "src/hlcl_error",
]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
hlcl_parse = { path = "src/hlcl_parse" }
hlcl_finalize = { path = "src/hlcl_finalize" }
hlcl_asm = { path = "src/hlcl_asm" }
hlcl_assembler = { path = "src/hlcl_assembler" }