[package]
name = "cocobean"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "src/coco_parse",
    "src/coco_span",
    "src/coco_ast",
    "src/coco_helpers",
    "src/coco_ast_merger",
    "src/coco_project",
    "src/coco_asm",
    "src/coco_assembler",
    "src/coco_error",
    "src/coco_resolve",
]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
coco_parse = { path = "src/coco_parse" }
coco_ast_merger = { path = "src/coco_ast_merger" }
coco_asm = { path = "src/coco_asm" }
coco_assembler = { path = "src/coco_assembler" }