[package]
name = "coco_asm"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[lib]
name = "coco_asm"
path = "lib.rs"
doctest = false

[dev-dependencies]
arbitrary = { version = "0.4", features = ["derive"] }
criterion = "0.3"

[dependencies]
coco_helpers = { path = "../coco_helpers" }
derive_more = "0.99.9"
smallvec = "1.4.1"
indexmap = "1.5.0"