[package]
name = "coco_assembler"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[lib]
name = "coco_assembler"
path = "lib.rs"
doctest = false

[dependencies]
coco_asm = { path = "../coco_asm" }
coco_helpers = { path = "../coco_helpers" }
derive_more = "0.99.9"
smallvec = "1.4.1"
itertools = "0.9.0"