[package]
name = "coco_ast"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[lib]
name = "coco_ast"
path = "lib.rs"
doctest = false

[dependencies]
coco_span = { path = "../coco_span" }
coco_helpers = { path = "../coco_helpers" }
itertools = "0.9.0"
derive_more = "0.99.9"
radix_trie = "0.2.0"