[package]
name = "coco_parse"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "coco_parse"
path = "lib.rs"
doctest = false

[build-dependencies]
lalrpop = { version = "0.19.0" }

[dependencies]
coco_span = { path = "../coco_span" }
coco_helpers = { path = "../coco_helpers" }
coco_project = { path = "../coco_project" }
coco_ast = { path = "../coco_ast" }
lalrpop-util = "0.19.0"
phf = { version = "0.8.0", features = ["macros"] }
fxhash = "0.2.1"
walkdir = "2.3.1"
crossbeam = "0.7.3"
rayon = "1.3.1"
itertools = "0.9.0"
smallvec = "1.4.1"