[package]
name = "hlcl_asm_lowering"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[lib]
name = "hlcl_asm_lowering"
path = "lib.rs"
doctest = false

[dependencies]
hlcl_asm = { path = "../hlcl_asm" }
hlcl_helpers = { path = "../hlcl_helpers" }
derive_more = "0.99.9"
smallvec = "1.4.1"
itertools = "0.9.0"