[package]
name = "hlcl_ast"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[lib]
name = "hlcl_ast"
path = "lib.rs"
doctest = false

[dependencies]
hlcl_span = { path = "../hlcl_span" }
hlcl_helpers = { path = "../hlcl_helpers" }
itertools = "0.9.0"
derive_more = "0.99.9"
radix_trie = "0.2.0"