[package]
name = "hlcl_ast_merger"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[lib]
name = "hlcl_ast_merger"
path = "lib.rs"
doctest = false

[dependencies]
hlcl_span = { path = "../hlcl_span" }
hlcl_ast = { path = "../hlcl_ast" }
hlcl_project = { path = "../hlcl_project" }
smallvec = "1.4.1"