[package]
name = "hlcl_error"
version = "0.1.0"
authors = ["JozsefA <jozsefaug@gmail.com>"]
edition = "2018"

[lib]
name = "hlcl_error"
path = "lib.rs"
doctest = false

[dependencies]
hlcl_span = { path = "../hlcl_span" }
hlcl_helpers = { path = "../hlcl_helpers" }
itertools = "0.9.0"
lasso = "0.2.2"
derive_more = "0.99.9"
annotate-snippets = "0.9.0"
crossbeam-channel = "0.4.3"